--- a/index.html
+++ b/index.html
@@ -22,21 +22,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Hollywood</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="#">Bollywood</a>
-        </li>
+    
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2 transparent searchBar" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0 submit" type="submit">Search</button>
       </form>
-      <button class="btn btn-success" id="spotify-login">Spotify Login</button>
+      <button class="btn btn-success mx-2" id="spotify-login">Spotify Login</button>
     </div>
   </nav>
   <div class="sidebar">
