--- a/index.html
+++ b/index.html
@@ -35,15 +35,25 @@
   </div>
   <div class="mainPage">
     <div class="display">
-      <!-- <div class="homepage">
-        <div class="carousel-item size">
-          <img src="img/abu.jpeg" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>jkjhkjk</h5>
-            <p>hkhkjh</p>
+        <div class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-sm"><img class="d-block img-fluid w-100" src="abu.jpeg" alt="1 slide"></div>
+                  <div class="col-sm"><img class="d-block w-100 img-fluid" src="logo-3.png" alt="2 slide"></div>
+                  <div class="col-sm"><img class="d-block w-100 img-fluid" src="logo-4.png" alt="3 slide"></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm"><img class="d-block img-fluid w-100" src="abu.jpeg" alt="1 slide"></div>
+                  <div class="col-sm"><img class="d-block w-100 img-fluid" src="logo-3.png" alt="2 slide"></div>
+                  <div class="col-sm"><img class="d-block w-100 img-fluid" src="logo-4.png" alt="3 slide"></div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </div> -->
+      
       <div class="results-area">
         <!-- movie content goes here -->
       </div> 
