--- a/index.html
+++ b/index.html
@@ -35,20 +35,56 @@
   </div>
   <div class="mainPage">
     <div class="display">
-        <div class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
+        <div id="slideshow" class="carousel slide txt" data-ride="carousel">Trending
+            <div class="carousel-inner my-3">
               <div class="carousel-item active">
                 <div class="row">
-                  <div class="col-sm"><img class="d-block img-fluid w-100" src="abu.jpeg" alt="1 slide"></div>
-                  <div class="col-sm"><img class="d-block w-100 img-fluid" src="logo-3.png" alt="2 slide"></div>
-                  <div class="col-sm"><img class="d-block w-100 img-fluid" src="logo-4.png" alt="3 slide"></div>
+                  <div class="col-sm  mx-1"><img class="d-block img-fluid w-100 mt-3 clk0" src="" alt="1 slide"><div class="small-txt my-2 p-1 movie-name0"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk1" src="" alt="2 slide"><div class="small-txt my-2 p-1 movie-name1"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk2" src="" alt="3 slide"><div class=" small-txt my-2 p-1 movie-name2"></div></div>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="row">
-                  <div class="col-sm"><img class="d-block img-fluid w-100" src="abu.jpeg" alt="1 slide"></div>
-                  <div class="col-sm"><img class="d-block w-100 img-fluid" src="logo-3.png" alt="2 slide"></div>
-                  <div class="col-sm"><img class="d-block w-100 img-fluid" src="logo-4.png" alt="3 slide"></div>
+                  <div class="col-sm  mx-1"><img class="d-block img-fluid w-100 mt-3 clk3" src="" alt="1 slide"><div class="small-txt my-2 p-1 movie-name3"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk4" src="" alt="2 slide"><div class="small-txt my-2 p-1 movie-name4"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk5" src="" alt="3 slide"><div class="small-txt my-2 p-1 movie-name5"></div></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm  mx-1"><img class="d-block img-fluid w-100 mt-3 clk6" src="" alt="1 slide"><div class="small-txt my-2 p-1 movie-name6"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk7" src="" alt="2 slide"><div class="small-txt my-2 p-1 movie-name7"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk8" src="" alt="3 slide"><div class="small-txt my-2 p-1 movie-name8"></div></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm  mx-1"><img class="d-block img-fluid w-100 mt-3 clk9" src="" alt="1 slide"><div class="small-txt my-2 p-1 movie-name9"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk10" src="" alt="2 slide"><div class="small-txt my-2 p-1 movie-name10"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk11" src="" alt="3 slide"><div class="small-txt my-2 p-1 movie-name11"></div></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm  mx-1"><img class="d-block img-fluid w-100 mt-3 clk12" src="" alt="1 slide"><div class="small-txt my-2 p-1 movie-name12"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk13" src="" alt="2 slide"><div class="small-txt my-2 p-1 movie-name13"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk14" src="" alt="3 slide"><div class="small-txt my-2 p-1 movie-name14"></div></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm  mx-1"><img class="d-block img-fluid w-100 mt-3 clk15" src="" alt="1 slide"><div class="small-txt my-2 p-1 movie-name15"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk16" src="" alt="2 slide"><div class="small-txt my-2 p-1 movie-name16"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk17" src="" alt="3 slide"><div class="small-txt my-2 p-1 movie-name17"></div></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm  mx-1"><img class="d-block img-fluid w-100 mt-3 clk18" src="" alt="1 slide"><div class="small-txt my-2 p-1 movie-name18"></div></div>
+                  <div class="col-sm  mx-1"><img class="d-block w-100 mt-3 img-fluid clk19" src="" alt="2 slide"><div class="small-txt my-2 p-1 movie-name19"></div></div>
+                  <div class="col-sm mx-1"><img class="d-block img-fluid w-100 clk20"  alt=""></div>
+
                 </div>
               </div>
             </div>
